@@ -7,10 +7,6 @@
 #include <time.h>
 #include <string.h>
 
-#if HAVE_MALLOC_H
-#include <malloc.h>
-#endif
-
 extern string version_string;
 
 static string now(void);
